[gd_scene load_steps=6 format=3 uid="uid://don5l8livtsxn"]

[ext_resource type="Script" path="res://scripts/Characthers/pathfinding/cell_2.gd" id="1_fwl1p"]
[ext_resource type="Texture2D" uid="uid://cskn57alcan64" path="res://sprites/cell/CÃ©lula.png" id="2_nl86d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qmprq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e8etg"]
atlas = ExtResource("2_nl86d")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_far0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8etg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Cell" type="CharacterBody3D" groups=["cell"]]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_fwl1p")
speed = null
move_radius = null
distance_to_run = null
floor_distance = null
floor_smoothness = null
life = null
original_color = null
red_color = null

[node name="MovementTime" type="Timer" parent="."]
process_callback = 0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.17039, 0, 0, 0, 1.17039, 0, 0, 0, 1.17039, 0, 0, 0)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_qmprq")

[node name="BlinkCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="WalkMarker" type="Marker3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -2.0
avoidance_enabled = true
radius = 1.0
neighbor_distance = 8.0
max_neighbors = 5
use_3d_avoidance = true
avoidance_layers = 2
avoidance_mask = 15

[node name="CellAnimatedSprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.237627, 0, 0, 0, 0.237627, 0, 0, 0, 0.237627, 0, 0.199289, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_far0h")
autoplay = "default"

[connection signal="timeout" from="MovementTime" to="." method="_on_movement_time_timeout"]
